[package]
name = "actix-redis"
version = "0.1.0"
authors = ["SaltyAom <aomkirby@mystiar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"

actix = "0.9.0"
actix-redis = "0.8.2"
futures = "0.3.5"
redis-async = "0.6.2"